# og

./: .gitignore  og.cabal
src/: Main.hs  Og.hs
test/: OgSpec.hs
