name:           og
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         g

executable og
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

test-suite spec
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -Werror
  hs-source-dirs:  src
                   , test
  main-is:         Spec.hs
  build-depends:   base    == 4.*
                   , hspec   >= 1.3